WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
243253
[Lockdown Mode] Chrome will not load past launch screen after install
https://bugs.webkit.org/show_bug.cgi?id=243253
Summary
[Lockdown Mode] Chrome will not load past launch screen after install
Aditya Keerthi
Reported
2022-07-27 09:08:18 PDT
rdar://95220110
Attachments
Add attachment
proposed patch, testcase, etc.
Aditya Keerthi
Comment 1
2022-07-27 09:17:26 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/2781
EWS
Comment 2
2022-07-27 11:56:50 PDT
Committed
252873@main
(45a7877d638b): <
https://commits.webkit.org/252873@main
> Reviewed commits have been landed. Closing PR #2781 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug